--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,11 +3,11 @@ $primary-color: #9356DC;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
     font-family: 'Shrikhand', sans-serif;
 }
 
-p {
+h2, h3, h4, h5, h6, p {
     font-family: 'Roboto', sans-serif;
 }
 
