--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 /***** General *****/
-h1, h2, h3, h4, h5, h6 {
+h1 {
   font-family: "Shrikhand", sans-serif;
 }
 
-p {
+h2, h3, h4, h5, h6, p {
   font-family: "Roboto", sans-serif;
 }
 
