--- a/sass/header.scss
+++ b/sass/header.scss
@@ -4,6 +4,16 @@ header {
     flex-direction: column;
     align-items: center;
     .logo {
-        display: flex; 
+        display: flex;
+        padding: 14px 13px;
+        img {
+            width: 197px;
+            height: 36px;
+        }
+    }
+    .location {
+        display: flex;
+        gap: 17px;
+        padding: 15.5px 15.5px;
     }
 }
