--- a/sass/header.scss
+++ b/sass/header.scss
@@ -1,11 +1,19 @@
+$primary-color: #9356DC;
+$secondary-color: #FF79DA;
+$tertiary-color: #99E2D0;
+$bg-color: #F6F6F6;
+$header-bg: #EAEAEA;
+
 /***** Header *****/
 header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     .logo {
         display: flex;
-        padding: 14px 13px;
+        justify-content: center;
+        padding-top: 14px;
+        padding-bottom: 13px;
+        position: relative;
+        z-index: 2;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
         img {
             width: 197px;
             height: 36px;
@@ -13,7 +21,13 @@ header {
     }
     .location {
         display: flex;
+        justify-content: center;
         gap: 17px;
         padding: 15.5px 15.5px;
+        background-color: $header-bg;
+        position:relative;
+        z-index: 1
+        ;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
     }
 }
