--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,11 @@
 $primary-color: #9356DC;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
+$bg-color: #F6F6F6;
+$header-bg: #EAEAEA;
+$subtitle-font: 300;
+$place-font:200;
+$button-font: 500;
 
 h1 {
     font-family: 'Shrikhand', sans-serif;
@@ -28,33 +33,65 @@ h4 {
 
 /***** Intro *****/
 .intro {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 39px 0px 115px 0px;
+    display: grid;
+    grid-template-columns: 1fr;
+    padding-bottom: 57px;
+    gap: 27px;
+    background-color: $bg-color;
+    text-align: center;
 
-    .intro-title {
+   &__title {
+        margin: 39px 58px 0px 42px;
+    }
+    
+    &__subtitle {
         margin: 0px 58px 0px 42px;
-        text-align: center;
+        font-weight: $subtitle-font;
+    }
+
+    &__button {
+        button {
+            border-radius: 25px;
+            border: none;
+            box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+            background: $primary-color;
+            background: linear-gradient(356deg, $primary-color 0%, $secondary-color 100%);
+            color: white;
+            height: 50px;
+            width: 218px;    
+            font-weight: $button-font;
+            font-size: 1rem;
+            font-family: 'Roboto', sans-serif;
+        }
     }
 }
 
-.button-intro {
-    display: flex;
-    justify-content: center;
+/***** Function *****/
+.function {
+    padding-top: 48px;
+    padding-bottom: 68px;
     
-    button {
-        border-radius: 25px;
-        border: none;
-        box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-        background: rgb(147,86,220);
-        background: linear-gradient(356deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
-        color: white;
-        height: 50px;
-        width: 218px;    
-        font-weight: medium;
-        font-size: 1rem;
-        font-family: 'Roboto', sans-serif;
+    &__title {
+        padding-bottom: 26px;
+    }
+
+    &__steps {
+        display: grid;
+
+        .__step {
+
+            .circle {
+                display: block;
+                width: 18px;
+                padding: 3px;
+                text-align: center;
+                border-radius: 20px;
+                background-color: purple;
+                border: none;
+                color: white;
+                font-family: 'Roboto', sans-serif;
+            }
+        }
     }
 }
 
