--- a/css/style.css
+++ b/css/style.css
@@ -38,11 +38,18 @@ h4 {
   margin: 0px 58px 0px 42px;
   font-weight: 300;
 }
-.intro__button button {
-  border-radius: 25px;
+.intro__button {
+  display: flex;
+  justify-content: center;
+}
+.intro__button .link__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: none;
+  border-radius: 25px;
+  text-decoration: none;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-  background: #9356DC;
   background: linear-gradient(356deg, #9356DC 0%, #FF79DA 100%);
   color: white;
   height: 50px;
@@ -59,20 +66,55 @@ h4 {
 }
 .function__title {
   padding-bottom: 26px;
+  margin: 0 auto;
 }
 .function__steps {
   display: grid;
+  gap: 25px;
 }
-.function__steps .__step .circle {
+.function__steps .__step .step__border {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  border-radius: 20px;
+  background-color: #F6F6F6;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  margin-bottom: 20px;
+  height: 65px;
+  max-width: 322.5px;
+  min-width: min-content;
+  margin: 0 auto;
+}
+.function__steps .__step .step__border .circle {
   display: block;
-  width: 18px;
+  width: 16px;
   padding: 3px;
   text-align: center;
   border-radius: 20px;
-  background-color: purple;
+  background-color: #9356DC;
   border: none;
   color: white;
   font-family: "Roboto", sans-serif;
+  position: relative;
+  right: 10px;
+}
+
+/***** Restaurants *****/
+.restaurants {
+  padding-top: 54px;
+}
+.restaurants__title {
+  padding-bottom: 20px;
+}
+.restaurants__cards {
+  display: grid;
+  gap: 20px;
+}
+.restaurants__cards .card img {
+  width: 200px;
+  height: 136px;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
