--- a/css/style.css
+++ b/css/style.css
@@ -68,24 +68,23 @@ h4 {
   padding-bottom: 26px;
   margin: 0 auto;
 }
-.function__steps {
+.function .function__all {
   display: grid;
   gap: 25px;
+  width: 335px;
+  margin: auto;
 }
-.function__steps .__step .step__border {
+.function .function__all .step {
   display: flex;
   align-items: center;
   gap: 15px;
   border-radius: 20px;
   background-color: #F6F6F6;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-  margin-bottom: 20px;
   height: 65px;
-  max-width: 322.5px;
-  min-width: min-content;
-  margin: 0 auto;
+  max-width: 335px;
 }
-.function__steps .__step .step__border .circle {
+.function .function__all .step .circle {
   display: block;
   width: 16px;
   padding: 3px;
@@ -104,31 +103,50 @@ h4 {
   padding-top: 54px;
   background-color: #F6F6F6;
 }
-.restaurants__title {
+.restaurants__all {
+  width: 340px;
+  margin: auto;
+}
+.restaurants__all .restaurants__title {
   padding-bottom: 20px;
 }
-.restaurants__cards {
+.restaurants__all .restaurants__cards {
   display: grid;
   gap: 20px;
-  justify-content: center;
 }
-.restaurants__cards .card {
+.restaurants__all .restaurants__cards .card {
   width: 340px;
   height: 251px;
   background-color: white;
   border-radius: 20px;
 }
-.restaurants__cards .card img {
+.restaurants__all .restaurants__cards .card .restaurants__img {
   object-fit: cover;
   width: 340px;
   height: 150px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
-.restaurants__cards .card .new {
+.restaurants__all .restaurants__cards .card .restaurants__img--first {
+  background-image: url(../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+  background-size: cover;
+  width: 340px;
+  height: 150px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+.restaurants__all .restaurants__cards .card .restaurants__img--second {
+  background-image: url(../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg);
+  background-size: cover;
+  width: 340px;
+  height: 150px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+.restaurants__all .restaurants__cards .card .new {
   display: inline-block;
   position: relative;
-  bottom: 140px;
+  top: 15px;
   left: 250px;
   background-color: #99E2D0;
   color: #008766;
