--- a/sass/style.scss
+++ b/sass/style.scss
@@ -84,24 +84,21 @@ h4 {
         margin:0 auto;
     }
 
-    &__steps {
+    .function__all {
         display: grid;
         gap:25px;
+        width: 335px;
+        margin: auto;
 
-        .__step {
-
-            .step__border {
-                display: flex;
-                align-items: center;
-                gap: 15px;
-                border-radius: 20px;
-                background-color: $bg-color;
-                box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-                margin-bottom: 20px;
-                height: 65px;
-                max-width: 322.5px;
-                min-width: min-content;
-                margin:0 auto;
+        .step {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            border-radius: 20px;
+            background-color: $bg-color;
+            box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+            height: 65px;
+            max-width: 335px;
 
                 .circle {
                     display: block;
@@ -119,67 +116,70 @@ h4 {
             }
         }
     }
-}
+
 
 /***** Restaurants *****/
 .restaurants {
     padding-top: 54px;
     background-color: $bg-color;
 
-    &__title {
-        padding-bottom: 20px;
-    }
+    &__all {
+        width: 340px;
+        margin: auto;
 
-    &__cards {
-        display: grid;
-        gap: 20px;
-        justify-content: center;
-
-        .card {
-            width: 340px;
-            height: 251px;
-            background-color: white;
-            border-radius: 20px;
-            
-            img {
-                object-fit: cover;
+        .restaurants__title {
+            padding-bottom: 20px;
+        }
+    
+        .restaurants__cards {
+            display: grid;
+            gap: 20px;
+    
+            .card {
                 width: 340px;
-                height: 150px;
-                border-top-left-radius: 20px;
-                border-top-right-radius: 20px;
-            }
-
-            .new {
-                display:inline-block;
-                position: relative;
-                bottom: 140px;
-                left: 250px;
-                background-color: $new-bg;
-                color: $new-font-color;
-                padding: 7px 12px;
-                border-radius: 2px;
-                font-weight: 500;
-                font-size: 14px;
-                text-align: center;
-            }
-
-            &__content {
-
-                &__txt {
-
-                    &__title {
-                         
-                    }
-
-                    &__subtitle {
-                        
-                    }
+                height: 251px;
+                background-color: white;
+                border-radius: 20px;
+                
+                .restaurants__img {
+                    object-fit: cover;
+                    width: 340px;
+                    height: 150px;
+                    border-top-left-radius: 20px;
+                    border-top-right-radius: 20px;
                 }
 
-            }
+                .restaurants__img--first {
+                    background-image: url(../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+                    background-size: cover;
+                    width: 340px;
+                    height: 150px;
+                    border-top-left-radius: 20px;
+                    border-top-right-radius: 20px;
+                }
 
-            &__like {
-
+                .restaurants__img--second {
+                    background-image: url(../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg);
+                    background-size: cover;
+                    width: 340px;
+                    height: 150px;
+                    border-top-left-radius: 20px;
+                    border-top-right-radius: 20px;
+                }
+    
+                .new {
+                    display:inline-block;
+                    position: relative;
+                    top: 15px;
+                    left: 250px;
+                    background-color: $new-bg;
+                    color: $new-font-color;
+                    padding: 7px 12px;
+                    border-radius: 2px;
+                    font-weight: 500;
+                    font-size: 14px;
+                    text-align: center;
+                }
             }
         }
     }
