--- a/css/footer.css
+++ b/css/footer.css
@@ -12,7 +12,17 @@ footer .footer__title {
 }
 footer .footer__menu {
   display: grid;
+  grid-template-columns: 1fr;
   gap: 7px;
+}
+footer .footer__menu .footer__icon {
+  padding-right: 11px;
+}
+footer .footer__menu .footer__icon--handshake {
+  padding-right: 9px;
+}
+footer .footer__menu .fa-handshake-angle {
+  font-size: 13px;
 }
 
 /*# sourceMappingURL=footer.css.map */
