--- a/sass/style.scss
+++ b/sass/style.scss
@@ -122,6 +122,7 @@ h4 {
 .restaurants {
     padding-top: 54px;
     background-color: $bg-color;
+    padding-bottom: 66px;
 
     &__all {
         width: 340px;
@@ -180,13 +181,23 @@ h4 {
                     text-align: center;
                 }
     
-                .card__txt {
-                    display: grid;
-                    grid-template-columns: 1fr;
-                    gap:5px;
-                    padding-left: 13px;
-                    padding-top: 16px;
-                    padding-bottom: 12px;
+                .card__content {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+
+                    .card__txt {
+                        display: grid;
+                        grid-template-columns: 1fr;
+                        gap:5px;
+                        padding-left: 13px;
+                        padding-top: 16px;
+                        padding-bottom: 12px;
+                    }
+
+                    .card__like {
+                        padding-right: 25px;
+                    }
                 }
             }
         }
