--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ h4 {
   font-weight: medium;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 /***** Intro *****/
 .intro {
   display: grid;
