--- a/sass/style.scss
+++ b/sass/style.scss
@@ -33,6 +33,11 @@ h4 {
     font-weight: medium;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 /***** Intro *****/
 .intro {
     display: grid;
@@ -59,7 +64,6 @@ h4 {
             display: flex;
             justify-content: center;
             align-items: center;
-            border:none;
             border-radius: 25px;
             text-decoration: none;
             box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
