--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,6 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: none;
   border-radius: 25px;
   text-decoration: none;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
@@ -62,6 +61,25 @@ a {
   font-weight: 500;
   font-size: 1rem;
   font-family: "Roboto", sans-serif;
+  position: relative;
+  z-index: 1;
+}
+.intro__button .link__button:hover::after {
+  opacity: 1;
+}
+.intro__button .link__button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 25px;
+  background-color: rgba(255, 255, 255, 0.25);
+  z-index: -1;
+  transition: opacity 500ms;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
+  opacity: 0;
 }
 
 /***** Function *****/
