--- a/sass/style.scss
+++ b/sass/style.scss
@@ -74,6 +74,29 @@ a {
             font-weight: $button-font;
             font-size: 1rem;
             font-family: 'Roboto', sans-serif;
+            position: relative;
+            z-index: 1;
+            &:hover {
+                &::after {
+                    opacity: 1;
+                    
+                }
+            }
+
+            &::after {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                border-radius: 25px;
+                background-color: rgba(255, 255, 255, 0.25);
+                z-index: -1;
+                transition: opacity 500ms;
+                box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.10);
+                opacity: 0;
+            }
         }
     }
 }
