--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -8,45 +8,56 @@ $footer-bg: #353535;
 footer {
     background-color: $footer-bg;
     color:white;
-    padding-top: 22px;
-    padding-bottom: 22px;
     font-family: 'Roboto', sans-serif;
     padding: 22px 25px;
+    
+     /*****Mobile*****/
+     @media screen and (min-width: 768px) {
+          display: flex;
+          flex-direction: row-reverse;
+          padding-top: 57px;
+     }
+     /*****Mobile*****/
 
     .footer__title {
-          padding-bottom: 16px;
-
-
-           /*****Mobile*****/
-          @media screen and (min-width: 768px) {
-               display: flex;
-          }
-          /*****Mobile*****/
-
-
+          padding-bottom: 16px;  
      }
 
-    .footer__menu {
-          display:grid;
-          grid-template-columns: 1fr;
-          gap:7px;
-
-
+    .links__all {
+          display:flex;
+          flex-direction: column;
+          align-items: normal;
+           
+          /***** Mobile *****/
           @media screen and (min-width: 768px) {
                display: flex;
-               justify-content: flex-end;
+               flex-direction: row;
           }
+          /***** Mobile *****/
  
+          .footer__links {
+               display: flex;
+               flex-direction: column;
+               margin-right: 40px;
 
-          .footer__link {
-               color: white;
+               /***** Mobile *****/
+               @media screen and (min-width: 768px) {
+                    display: flex;
+                    flex-direction: row;
+               }
+               /***** Mobile *****/
+               
+               .footer__link {
+                    color: white;
+                    margin-right: 10px;
 
-               .footer__icon {
-                    padding-right: 11px;
+                    .footer__icon {
+                         padding-right: 11px;
 
-                    &--handshake {
-                         padding-right: 9px;
-                         font-size: 13px;
+                         &--handshake {
+                              padding-right: 9px;
+                              font-size: 13px;
+                         }
                     }
                }
           }
