--- a/sass/header.scss
+++ b/sass/header.scss
@@ -14,6 +14,7 @@ header {
         position: relative;
         z-index: 2;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+        
         img {
             width: 197px;
             height: 36px;
@@ -26,8 +27,7 @@ header {
         padding: 15.5px 15.5px;
         background-color: $header-bg;
         position:relative;
-        z-index: 1
-        ;
+        z-index: 1;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
     }
 }
